--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,12 +3,14 @@
       <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
         <use href="../img/symbol-defs.svg#icon-sun"></use>
         </svg>
-        <p class="hero-text">all embroidery is made by hand</p>
+        <p class=" text hero-text">all embroidery is made by hand</p>
       </div>
-      <h1 class="hero-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
-      <button type="button" class="hero-btn">Order <svg class="hero-btn-icon" width="26" height="10">
+       <!-- <div class="hero-btn-box"> -->
+        <h1 class=" global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
+           
+      <a class="hero-btn link" href="#Your order">Order <svg class="hero-btn-icon" width="26" height="10">
         <use href="../img/symbol-defs.svg#icon-untitled"></use>
-        </svg></button>
+        </svg></a>     
         <picture class="hero-picture">
           <source
             srcset="./img/hero/girl-desctop.jpeg 1x, ./img/hero/girl-desctop@2x.jpeg 2x"
@@ -23,14 +25,15 @@
             media="(max-width: 767px)"
           />
           <img
-            src="./img/hero/girl-desctop.jpeg"
+            src="./img/hero/Girl-tab.jpeg"
             alt="Girl"
-            width="392"
-            height="545"
-            class="hero-title-img"
+            width="413"
+            height="575"
+            class="hero-global-img"
             
           />
         </picture>
+       <!-- </div>  -->
         <img
               srcset="./img/hero/Group-desctop.png 1x, ./img/hero/Group-desctop@2x.png 2x"
                 src="./img/hero/Group.png"
