--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,19 +1,25 @@
 /* HERO */
-.container{
-    width: 100%;
-    max-width: 375px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 0 auto;
-}
+.container {
+    max-width: 335px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 .hero-container{
-    padding: 60px 20px 80px 20px;
+  
+    padding-top: 60px;
+    padding-bottom: 80px;
     
 }
 .hero-text-box{
 display: none;
 }
-.hero-title{
+/* .hero-global-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+} */
+.global-title{
 color: var(--white, #FCF9F9);
 font-size: 44px;
 font-weight: 400;
@@ -23,6 +29,10 @@ letter-spacing: -0.03em;
 .hero span{
 color: var(--white, #ECD979);
 }
+/* .hero-btn-box{
+    display: flex;
+    justify-content: center;
+} */
 .hero-btn{
 color: var(--white, #FCF9F9);
 font-size: 14px;
@@ -32,7 +42,7 @@ letter-spacing: -0.56px;
 text-transform: uppercase;
 border-radius: 15px;
 border: 1px solid rgba(252, 249, 249, 0.10);
-display: inline-flex;
+display: flex;
 height: 49px;
 padding: 14px 36px;
 justify-content: center;
@@ -40,8 +50,11 @@ align-items: center;
 gap: 10px;
 flex-shrink: 0;
 transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-margin-top: 20px;
-margin-bottom: 40px;
+width: 168px;
+height: 50px;
+ margin-top: 20px;
+margin-bottom: 40px; 
+transform: translateX(30%); 
 }
 .hero-btn:hover{
 border: 1px solid var(--yellow, #ECD979);
@@ -53,77 +66,95 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .hero-btn svg:hover{
 transform: rotate(-30deg);    
 }
-.hero-title-img{
+/* .hero-global-img{
     width: 335px;
 height: 545px;
 flex-shrink: 0;
-}
+} */
 .hero-img{
 display: none;
 }
     
 
-@media screen and (min-width: 768px){
-    .hero{
-        position: relative;
-    }
-    .container{
-        max-width: 768px;
-    }
-    .hero-container{
-        padding: 53px 32px 50px 32px;
-        position: relative;
-    }
-    .hero-text-box{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        row-gap: 16px;
-        position: absolute;
-        right: 0;
 
-       
-        }
-    .hero-text{color: rgba(252, 249, 249, 0.40);
-        text-align: center;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: -0.04em;
-        max-width: 115px;
-    }
     
-    .hero-title{
-        font-size: 54px;
-        line-height: 1.19em;
-        max-width: 549px;
+      @media screen and (min-width: 768px){
+        .container {
+          max-width: 704px;
         }
-    .hero-btn{
-        font-size: 16px;
-        padding: 14px 39px;
-    } 
-    .hero-img{
-        display: block;
-        position: absolute;
-        right: 0;
-        bottom: 42px;
-        }   
-}
+        /* .hero{
+            position: relative;
+        } */
+        
+        .hero-container{
+           
+            padding-top: 53px;
+            padding-bottom: 50px;
+            position: relative;
+        }
+        .hero-text-box{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            row-gap: 16px;
+            position: absolute;
+            right: 0;
+            top: 34px;
+    
+           
+            }
+        .text{
+            color: rgba(252, 249, 249, 0.40);
+            text-align: center;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: normal;
+            letter-spacing: -0.04em;
+        }
+        .hero-text{
+            max-width: 115px;
+        }
+        
+        
+        .global-title{
+            font-size: 54px;
+            line-height: 1.19em;
+           
+        }
+            .hero-global-title{
+            max-width: 549px;
+        }
+        .hero-btn{
+            font-size: 16px;
+            padding: 14px 39px;
+            margin-top: 40px;
+            transform: translateX(65%); 
+        } 
+        .hero-img{
+            display: block;
+            position: absolute;
+            right: 0;
+            bottom: -62px;
+            }   
+      }
+      @media screen and (min-width: 1280px){
+        .container {
+          max-width: 1082px;
+        }
+        .hero-container{
+        
+        padding-top: 58px;
+        padding-bottom: 75px;
+      }
+      
+    }
+      @media screen and (min-width: 1440px){
+        .container {
+          max-width: 1240px; }
 
-
-
-
-
-
-
-    @media screen and (min-width: 1280px){}
-
-    @media screen and (min-width: 1440px){
-        .hero-title{
+        .global-title{
             font-size: 64px;
             line-height: 1.16em;
-            }
-
-
-    }
+            } 
+        }
 
