--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,6 +1,6 @@
 <section class="testimonials">
-  <div class="container testimonials__inner">
-    <h2 class="testimonials__title">Testimonials</h2>
+  <div class="testimonials__inner container">
+    <h2 class="testimonials__title title">Testimonials</h2>
     <ul class="testimonials__list">
       <li class="testimonials__item">
         <div class="testimonials__img-wrap">
@@ -15,7 +15,7 @@
         </div>
         <div class="testimonials__text-wrap">
           <h3 class="testimonials__subtitle">Maria Tkachuk</h3>
-          <p class="testimonials__text">
+          <p class="testimonials__text text">
             I was pleasantly surprised by the variety of embroidery offered by
             Vyshyvanka Vibes. They have models for every taste - from classic to
             modern. I bought an embroidered dress to celebrate a special
@@ -36,7 +36,7 @@
           />
         </div>
         <h3 class="testimonials__subtitle">Sergey Rybachok</h3>
-        <p class="testimonials__text">
+        <p class="testimonials__text text">
           Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are
           simply masterpieces! I fell in love with the quality of the materials
           and the skill of the artisans behind each product. This is my favorite
@@ -55,7 +55,7 @@
           />
         </div>
         <h3 class="testimonials__subtitle">Natalia Chatuk</h3>
-        <p class="testimonials__text">
+        <p class="testimonials__text text">
           Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian
           culture. Their embroidery reflects the spirit and traditions of our
           people. I not only buy embroidered shirts for myself, but also give
