--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -2,7 +2,7 @@
   <div class="testimonials__inner container">
     <h2 class="testimonials__title title">Testimonials</h2>
     <ul class="testimonials__list">
-      <li class="testimonials__item">
+      <li class="testimonials__item" tabindex="0">
         <div class="testimonials__img-wrap">
           <img
             src="./img/Maria-Tcacuk.png"
@@ -24,7 +24,7 @@
           </p>
         </div>
       </li>
-      <li class="testimonials__item">
+      <li class="testimonials__item" tabindex="0">
         <div class="testimonials__img-wrap">
           <img
             src="../img/Sergiy.png"
@@ -43,7 +43,7 @@
           embroidery shop where I always find something special and unique.
         </p>
       </li>
-      <li class="testimonials__item">
+      <li class="testimonials__item" tabindex="0">
         <div class="testimonials__img-wrap">
           <img
             src="./img/Natalia.png"
