--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -90,7 +90,7 @@
       </address>
       <button type="button" class="mob-close-btn">
         <svg class="mob-btn-icon" width="36" height="36">
-          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+          <use href="../img/close.svg"></use>
         </svg>
       </button>
     </div>
@@ -103,15 +103,6 @@
           <li class="mob-header-menu-item"><a href="#">TEstimonials</a></li>
         </ul>
       </nav>
-    </div>
-    <div>
-      <img
-        srcset="./images/ 1x, ./images/ 2x"
-        src="./images/"
-        alt="ornament"
-        width="340"
-        class="mob-menu-img"
-      />
     </div>
   </div>
 </header>
