--- a/src/css/header.css
+++ b/src/css/header.css
@@ -15,15 +15,20 @@
   display: inline-flex;
   align-items: center;
 }
+
 .header-menu {
+  display: none; /* display: inline-flex; */
+  align-items: flex-start;
+  gap: 25px;
+  list-style: none;
 }
+
 .header-menu-item {
   color: var(--white, #fcf9f9);
   font-size: 14px;
   font-weight: 400;
   line-height: 1.29em;
   text-transform: uppercase;
-  gap: 25px;
 }
 
 .header-menu-link {
