--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,9 +69,9 @@
     </ul>
 
     <button type="button" class="menu-header-btn">
-      <svg class="menu-icon" width="44" height="30">
+      <!-- <svg class="menu-icon" width="44" height="30">
         <use href="../img/burger.svg"></use>
-      </svg>
+      </svg> -->
     </button>
   </div>
 
@@ -89,9 +89,11 @@
         </ul>
       </address>
       <button type="button" class="mob-close-btn">
-        <svg class="mob-btn-icon" width="36" height="36">
+        <!-- <svg class="mob-btn-icon" width="36" height="36">
           <use href="../img/close.svg"></use>
-        </svg>
+        </svg> -->
+        <span></span>
+        <span></span>
       </button>
     </div>
     <div>
