--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -42,28 +42,24 @@ letter-spacing: -0.56px;
 text-transform: uppercase;
 border-radius: 15px;
 border: 1px solid rgba(252, 249, 249, 0.10);
-display: flex;
-height: 49px;
+display: block;
 padding: 14px 36px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-flex-shrink: 0;
 transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-width: 168px;
+max-width: 168px;
 height: 50px;
- margin-top: 20px;
+ margin: 20px auto 0;
 margin-bottom: 40px; 
-transform: translateX(30%); 
+
 }
 .hero-btn:hover{
 border: 1px solid var(--yellow, #ECD979);
 }
-.hero-btn svg{
+.hero-btn-icon{
 flex-shrink: 0;
+margin-left: 10px;
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.hero-btn svg:hover{
+.hero-btn-icon:hover{
 transform: rotate(-30deg);    
 }
 /* .hero-global-img{
@@ -128,7 +124,7 @@ display: none;
             font-size: 16px;
             padding: 14px 39px;
             margin-top: 40px;
-            transform: translateX(65%); 
+           
         } 
         .hero-img{
             display: block;
@@ -157,4 +153,3 @@ display: none;
             line-height: 1.16em;
             } 
         }
-
