--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,16 +1,13 @@
 <section class="hero">
     <div class="container hero-container">
-      <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
-        <use href="../img/symbol-defs.svg#icon-sun"></use>
-        </svg>
-        <p class=" text hero-text">all embroidery is made by hand</p>
-      </div>
-       <!-- <div class="hero-btn-box"> -->
+      
+      
         <h1 class=" global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
-           
+            
+        <div class="hero-btn-box">
       <a class="hero-btn link" href="#Your order">Order <svg class="hero-btn-icon" width="26" height="10">
         <use href="../img/symbol-defs.svg#icon-untitled"></use>
-        </svg></a>     
+        </svg></a> </div>     
         <picture class="hero-picture">
           <source
             srcset="./img/hero/girl-desctop.jpeg 1x, ./img/hero/girl-desctop@2x.jpeg 2x"
@@ -33,7 +30,12 @@
             
           />
         </picture>
-       <!-- </div>  -->
+       
+       <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
+        <use href="../img/symbol-defs.svg#icon-sun"></use>
+        </svg>
+        <p class=" text hero-text">all embroidery is made by hand</p>
+      </div>
         <img
               srcset="./img/hero/Group-desctop.png 1x, ./img/hero/Group-desctop@2x.png 2x"
                 src="./img/hero/Group.png"
