--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -2,46 +2,15 @@
 <section class="collection">
   <div class="container container-collection">
     <h2 class="title-section-collection">Our collection</h2>
+        
     <ul class="collection-list">
-      
       <li class="collection-card">
         <picture>
-          <source
-            srcset="
-              ./img/collection-1-desctop.jpg    1x,
-              ./img/collection-1-desctop@2x.jpg 2x
-            "
-            media="(min-width: 1440px)"
-          />
-          <source
-            srcset="
-              ./img/collection-1-desctop-small.jpg    1x,
-              ./img/collection-1-desctop-small@2x.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./img/collection-1-tab.jpg    1x,
-              ./img/collection-1-tab@2x.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ./img/collection-1-mob.jpg    1x,
-              ./img/collection-1-mob@2x.jpg 2x
-            "
-            media="(max-width: 767px)"
-          />
-          <img
-            src="./img/collection-1-desctop.jpg"
-            loading="lazy"
-            alt="Poltava"
-            width="335"
-            height="400"
-            class="collection-img"
-          />
+          <source srcset="./img/collection-1-desctop.jpg 1x, ./img/collection-1-desctop@2x.jpg 2x" media="(min-width: 1440px)"/>
+          <source srcset="./img/collection-1-desctop-small.jpg 1x, ./img/collection-1-desctop-small@2x.jpg 2x" media="(min-width: 1280px)"/>
+          <source srcset="./img/collection-1-tab.jpg 1x, ./img/collection-1-tab@2x.jpg 2x"  media="(min-width: 768px)"/>
+          <source srcset="./img/collection-1-mob.jpg 1x, ./img/collection-1-mob@2x.jpg 2x"  media="(max-width: 767px)"/>
+          <img src="./img/collection-1-desctop.jpg" loading="lazy" alt="Poltava" width="335" height="400" class="collection-img index"/>
         </picture>
         <div class="collection-card-content">
           <h3 class="title-img">AUGUST Poltava women's blouseRING</h3>
@@ -271,4 +240,11 @@
       </li>
     </ul>
   </div>
+ <picture>
+          <source srcset="./img/ornament-collection-desctop.png 1x, ./img/ornament-collection-desctop@2x.png 2x" media="(min-width: 1440px)"/>
+          <source srcset="./img/ornament-collection-desctop-small.png 1x, ./img/ornament-collection-desctop-small@2x.png 2x" media="(min-width: 1280px)"/>
+          <source srcset="./img/ornament-collection-tab.png 1x, ./img/ornament-collection-tab@2x.png 2x"  media="(min-width: 768px)"/>
+          <source srcset="./img/ornament-collection-mob.png 1x, ./img/ornament-collection-mob@2x.png 2x"  media="(max-width: 767px)"/>
+          <img src="./img/ornament-collection-mob.png" loading="lazy" alt="Ornament" class="collection-ornament"/>
+   </picture>   
 </section>
