--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,112 +1,303 @@
 /* YOUR-ORDER */
-.your-order {
 
+.container {
+  max-width: 375px;
 }
 
 .background-image-girl {
-    background-image: url(../img/bg-girl-mob.jpg);
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: contain;
-    min-width: 375px;
-    height: 550px;
-    padding-bottom: 80px;
-    margin: 0 auto;
+  background-image: url(../img/bg-girl-mob.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: contain;
+  min-width: 375px;
+  min-height: 550px;
+  margin: -20px;
+  margin-bottom: 80px;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .background-image {
+    background-image: url(../img/bg-girl-mob@2x.jpg);
+  }
+}
+
+.image-your-order {
+  display: none;
+}
+
+.order-title {
+  letter-spacing: -0.03em;
+  margin-bottom: 40px;
+  text-align: left;
+  width: 255px;
+}
+
+.order-title span {
+  color: #ecd979;
+}
+
+.form-order {
+  padding-bottom: 80px;
+}
+
+.form-input {
+  border-radius: 15px;
+  border: 1px solid rgba(252, 249, 249, 0.1);
+  background-color: transparent;
+  width: 100%;
+  height: 47px;
+  margin-bottom: 20px;
+  padding-right: 16px;
+  padding-left: 16px;
+  color: rgb(252, 248, 248);
+  font-size: 14px;
+  transition: border-color 250ms linear;
+}
+
+.form-input:focus {
+  border: 1px solid rgba(252, 249, 249, 0.6);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input::placeholder {
+  color: rgba(252, 249, 249, 0.5);
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: -0.02em;
+}
+
+.form-textarea {
+  width: 100%;
+  height: 196px;
+  margin-bottom: 40px;
+  padding: 14px 16px;
+  color: hsl(0, 33%, 98%);
+  transition: border-color 250ms linear;
+  border-radius: 8px;
+  border: 1px solid rgba(252, 249, 249, 0.1);
+  background-color: transparent;
+  resize: none;
+}
+
+.form-textarea::placeholder {
+  color: rgba(252, 249, 249, 0.5);
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: -0.02em;
+}
+
+.form-textarea:focus {
+    border: 1px solid rgba(252, 249, 249, 0.6);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn {
+  padding: 14px 36px;
+  color: #fcf9f9;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  border-radius: 15px;
+  border: 1px solid rgba(252, 249, 249, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  min-width: 145px;
+  height: 49px;
+  margin: 0 auto;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:focus,
+.form-btn:hover {
+        border: 1px solid #ECD979;
+}
+
+.btn-icon {
+  fill: #ecd979;
+}
+
+/* MEDIA for tablet */
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 744px;
+  }
+
+  .background-image-girl {
+    max-width: 768px;
+    min-height: 776px;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .background-image-girl {
+      background-image: url(../img/bg-girl-tab@2x.jpg);
     }
+  }
+
+  .order-title {
+    font-size: 44px;
+    font-weight: 500;
+    line-height: 1, 31;
+    letter-spacing: -0.03em;
+    width: 542px;
+  }
+
+  .form-order {
+    padding-bottom: 100px;
+  }
+
+  .form-input {
+    width: 100%;
+    height: 50px;
+  }
+
+  .form-input::placeholder {
+    font-size: 16px;
+    letter-spacing: -0.02em;
+  }
+
+  .form-textarea {
+    width: 100%;
+  }
+
+  .form-btn {
+    display: inline-flex;
+    min-width: 168px;
+    height: 50px;
+    padding: 14px 39px;
+        font-size: 16px;
+        letter-spacing: -0.04em;
+  }
+
+.your-order-main {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.image-your-order {
+    display: block;
+     position: relative;
+    padding: 0 32px 179px 98px;
+}
+
+.order-img {
+    width: 638px;
+    height: 521px;
+    flex-shrink: 0;
+    border-radius: 4px;
+}
+
+.image-your-order::before {
+    content: "";
+    position: absolute;
+    background-image: url(../img/ornament-your-order-tab.png);
+    background-repeat: no-repeat;
+background-position: left top;
+    background-size: contain;
+    
+    left: 0;
+    bottom: 100px;
+    height: 484px;
+    width: 545px;
+    z-index: -1;
+
+}
+
+  }
+   
+
+
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1222px;
+    padding: 0;
+  }
+
+.background-image-girl {
+    background-image: url(../img/bg-girl-desctop-small.jpg);
+min-width: 1222px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    margin: 0 auto;
+    margin-bottom: 150px;
+}
 
 @media (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
-    .background-image {
-        background-image: url(../img/bg-girl-mob@2x.jpg);
+    .background-image-girl {
+        background-image: url(../img/bg-girl-desctop-small@2x.jpg);
     }
 }
 
+.your-order-main {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    gap: 50px;
+    width: 100%; 
+}
+
 .image-your-order {
-    display: none;
+    display: block;
+position: relative;
+padding: 0 0 150px 64px;
+}
+
+
+.title-and-form {
+    position: relative;
+    margin-right: 134px;
 }
 
 .order-title {
+    font-size: 44px;
+    font-weight: 500;
+    line-height: 1, 31;
     letter-spacing: -0.03em;
-    margin-bottom: 40px;
-    text-align: left;
+    width: 542px;
 }
 
-.order-title span {
-    color: #ecd979;
+.form-order {
+    padding-bottom: 150px;
 }
-
-.form-order {}
-
-
-.form-label {}
 
 .form-input {
-    border-radius: 15px;
-    border: 1px solid rgba(252, 249, 249, 0.1);
-    background-color: transparent;
     width: 100%;
-    height: 47px;
-    margin-bottom: 20px;
-    padding-right: 16px;
-    padding-left: 16px;
-    color: hsl(0, 33%, 98%);
-    font-size: 14px;
-    transition: border-color 250ms linear;
+    height: 50px;
 }
 
-.form-input:focus {
-    border: 1px solid rgba(252, 249, 249, 0.6);
-}
-
-.form-input::placeholder {
-    color: rgba(252, 249, 249, 0.5);
-    font-size: 14px;
-    line-height: normal;
-    letter-spacing: -0.02em;
-}
-
-.form-textarea {
-    width: 100%;
-    height: 196px;
-    margin-bottom: 40px;
-    padding: 14px 16px;
-    color: hsl(0, 33%, 98%);
-    font-size: 14px;
-    transition: border-color 250ms linear;
-    border-radius: 8px;
-    border: 1px solid rgba(252, 249, 249, 0.1);
-    background-color: transparent;
-    resize: none;
-}
-
-.form-textarea::placeholder {
-    color: rgba(252, 249, 249, 0.5);
-    font-size: 14px;
-    line-height: normal;
-    letter-spacing: -0.02em;
-}
-
-.form-btn {
-    padding: 14px 36px;
-    color: #fcf9f9;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: normal;
+.form-btn { 
+min-width: 168px;
+height: 50px;
+font-size: 16px;
     letter-spacing: -0.04em;
-    text-transform: uppercase;
-    border-radius: 15px;
-    border: 1px solid rgba(252, 249, 249, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 14px 36px;
-    gap: 10px;
-    min-width: 145px;
-    height: 49px;
-    margin: 0 auto;
 }
 
-.btn-icon {
-    fill: #ecd979;
+.order-img {
+    min-width: 524px;
+    height: 521px;
+    flex-shrink: 0;
+    border-radius: 4px;
 }
+
+.image-your-order::before {
+    bottom: 40px;
+    left: -20px;
+}
+
+ }
