--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,36 +1,44 @@
-<section class="your-order">
+<section class="container your-order">
     <div class="background-image-girl"></div>
-    <div class="image-your-order">
-        <picture>
-            <source srcset="./img/your-order-desctop.jpeg, ./img/your-order-desctop@2.jpeg" min-width="524px" />
-        </picture>
-        <picture>
-            <source srcset="./img/your-order-desctop-small.jpeg, ./img/your-order-desctop-small@2x.jpeg"
-                min-width="524px" />
-        </picture>
-        <picture>
-            <source srcset="./img/your-order-tab.jpeg, ./img/your-order-tab@2x.jpeg" min-width="638px" />
-        </picture>
-        <img class="order-img" src="./img/your-order-desctop.jpeg" alt="vyshyvanka" width="524" height="521" />
-    </div>
-    <div class="background-image-ornament"></div>
+      <div class="your-order-main">
+     <div class="image-your-order">
+            <!-- <picture class="order-picture">
+                <source srcset="./img/your-order-desctop.jpeg, ./img/your-order-desctop@2x.jpeg" min-width="524px" />
+            </picture>
+            <picture class="order-picture">
+                <source srcset="./img/your-order-desctop-small.jpeg, ./img/your-order-desctop-small@2x.jpeg"
+                    min-width="524px" />
+            </picture>
+            <picture class="order-picture">
+                <source srcset="./img/your-order-tab.jpeg, ./img/your-order-tab@2x.jpeg" min-width="638px" />
+            </picture> -->
+            <!-- <div class="image-order-ornament"><img class="ornament-img" src="./img/ornament-your-order-dsctop.png" alt="ornament" width="545" height="484" /></div> -->
+           <img class="order-img" src="./img/your-order-desctop.jpeg" alt="vyshyvanka" width="524" height="521" />
+            <!-- <div class="image-order-main"></div> -->
+        </div>
+        <div class="title-and-form">
     <h2 class="order-title">
         <span class="yellow-part">Your order</span> is our priority: Personalized approach and quality
         of service
     </h2>
     <form class="form-order">
         <div class="form-field-order">
+            <div class="inut-name">
             <input type="text" name="user-name" class="form-input" id="user-name" placeholder="Enter your full name"
-                pattern="[A-Za-z]{2,}" title="Enter at least 2 letters of the Latin alphabet" required />
+                pattern="[A-Za-z]{2,}" title="Enter at least 2 letters of the Latin alphabet" required /></div>
+       <div class="input-emeil">
             <input type="email" name="user-email" class="form-input" id="user-email" placeholder="Enter your email"
-                required />
-            <textarea name="user-text" id="user-text" class="form-textarea" placeholder="Comments"></textarea>
-        </div>
+                required /></div>
+                <div class="textarea-comments">
+            <textarea name="user-text" id="user-text" class="form-textarea" placeholder="Comments"></textarea></div>
         <button type="submit" class="form-btn">
             Send
             <svg class="btn-icon" width="26" height="10">
                 <use href="./img/symbol-defs.svg#icon-arrow"></use>
-            </svg>
-        </button>
-    </form>
+            </svg> </button> 
+        </div>
+        </form></div>
+        </div>
+
+        
 </section>
