html markup and part of css 1.5

--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -2,7 +2,7 @@
     <div class="background-image-girl"></div>
       <div class="your-order-main">
      <div class="image-your-order">
-            <!-- <picture class="order-picture">
+            <picture class="order-picture">
                 <source srcset="./img/your-order-desctop.jpeg, ./img/your-order-desctop@2x.jpeg" min-width="524px" />
             </picture>
             <picture class="order-picture">
@@ -11,10 +11,8 @@
             </picture>
             <picture class="order-picture">
                 <source srcset="./img/your-order-tab.jpeg, ./img/your-order-tab@2x.jpeg" min-width="638px" />
-            </picture> -->
-            <!-- <div class="image-order-ornament"><img class="ornament-img" src="./img/ornament-your-order-dsctop.png" alt="ornament" width="545" height="484" /></div> -->
+            </picture>
            <img class="order-img" src="./img/your-order-desctop.jpeg" alt="vyshyvanka" width="524" height="521" />
-            <!-- <div class="image-order-main"></div> -->
         </div>
         <div class="title-and-form">
     <h2 class="order-title">
@@ -39,6 +37,4 @@
         </div>
         </form></div>
         </div>
-
-        
 </section>
