--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -201,7 +201,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .image-your-order::before {
     content: "";
     position: absolute;
-    background-image: url(../img/ornament-your-order-tab.png);
+    background-image: url(../img/ornament-your-order-tab@2x.png);
     background-repeat: no-repeat;
 background-position: left top;
     background-size: contain;
