--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,13 @@
 <section class="hero">
     <div class="container hero-container">
-      <div class="aaaaaaa">
-       <div class="hero-btn-box">
-        <h1 class=" global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
-            
+      <div class="hero-row-reverse-box">
+       <div><h1 class=" global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
+            <div class="hero-btn-box">
        <a class="hero-btn link" href="#Your order">Order <svg class="hero-btn-icon" width="26" height="10">
         <use href="../img/symbol-defs.svg#icon-untitled"></use>
-        </svg></a> </div>    
+        </svg></a> 
+      </div>  </div>
+          
         
         <picture class="hero-picture">
           <source
@@ -31,8 +32,8 @@
           /></div>
       
         </picture></div>
-       
-       <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
+      
+        <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
         <use href="../img/symbol-defs.svg#icon-sun"></use>
         </svg>
         <p class=" text hero-text">all embroidery is made by hand</p>
@@ -45,6 +46,8 @@
                 height="191"
                 class="hero-img"
               />
+            
+      
     </div>
 </section>        
 
