--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,16 +1,16 @@
 /* HERO */
-.container {
+/* .container {
     max-width: 335px;
     margin-left: auto;
     margin-right: auto;
-  }
+  } */
 .hero-container{
   
     padding-top: 60px;
     padding-bottom: 80px;
     
 }
-.hero-text-box{
+.absolut{
 display: none;
 }
 /* .hero-global-box{
@@ -26,9 +26,15 @@ font-weight: 400;
 line-height: 1.23; 
 letter-spacing: -0.03em;
 }
+.hero-global-title{
+  max-width: 335px;
+}
 .hero span{
 color: var(--white, #ECD979);
 }
+.hero-btn-box{
+  margin-left: 70px;
+} 
 
 .hero-btn{
 color: var(--white, #FCF9F9);
@@ -40,9 +46,10 @@ text-transform: uppercase;
 border-radius: 15px;
 border: 1px solid rgba(252, 249, 249, 0.10);
 display: flex;
-justify-content: center;
-align-items: center;
-gap: 10px;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+
 padding: 14px 36px;
 transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 max-width: 168px;
@@ -62,7 +69,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .hero-btn-icon:hover{
 transform: rotate(-30deg);    
 }
-
+.hero-text-box{
+  display: none;
+}
 .hero-img{
 display: none;
 }
@@ -74,27 +83,26 @@ display: none;
         .container {
           max-width: 704px;
         }
-        /* .hero{
-            position: relative;
-        } */
         
-        .hero-container{
+        
+        .hero-container{          
+         
+            padding-bottom: 100px;
            
-            padding-top: 53px;
-            padding-bottom: 50px;
-            position: relative;
+        } 
+         .hero-btn-box{
+          margin-left: 153px;
+        } 
+        
+        .hero-btn{
+          
+          font-size: 16px;
+            padding: 14px 39px;
+            margin-top: 40px;
         }
-        .hero-text-box{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            row-gap: 16px;
-            position: absolute;
-            right: 0;
-            top: 34px;
-    
+        
            
-            }
+            
         .text{
             color: rgba(252, 249, 249, 0.40);
             text-align: center;
@@ -103,6 +111,15 @@ display: none;
             line-height: normal;
             letter-spacing: -0.04em;
         }
+        .hero-text-box{
+          display: flex;
+          flex-direction: column;
+          gap: 16px;
+          align-items: center;
+          position: absolute;
+          right: 32px;
+          top: 0;
+        }
         .hero-text{
             max-width: 115px;
         }
@@ -110,23 +127,18 @@ display: none;
         
         .global-title{
             font-size: 54px;
-            line-height: 1.19em;
+            line-height: 1.19;
            
         }
             .hero-global-title{
             max-width: 549px;
         }
-        .hero-btn{
-            font-size: 16px;
-            padding: 14px 39px;
-            margin-top: 40px;
-           
-        } 
+        
         .hero-img{
             display: block;
             position: absolute;
-            right: 0;
-            bottom: -62px;
+            right: 23px;
+            bottom: 211px;
             }   
       }
       @media screen and (min-width: 1280px){
@@ -140,34 +152,46 @@ display: none;
         
         
       }
-      .aaaaaaa{
+      .hero-row-reverse-box{
         display: flex;
-      flex-direction: row-reverse;
-      justify-content: space-between;
-      gap: 40px;
-      
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    gap: 40px;
     }
-      .hero-btn-box{
-       
-        
-       
-      }
+     
       .hero-global-title{
         font-size: 54px;
-        line-height: 1.16em;    
+        line-height: 1.16;    
         max-width: 518px;
         padding-top: 94px;
         } 
-        .hero-btn{
+        /* .hero-btn{
          margin: 40px auto 0;
+        } */
+        .hero-btn-box{
+          margin-left: 181px;
+        } 
+        .hero-text-box{
+          
+          right: 100px;
+          top: 90px;
         }
+        .hero-img{
+          right: 96px;
+          bottom: 530px;
+          
+          }   
     }
       @media screen and (min-width: 1440px){
         .container {
           max-width: 1240px; }
 
-        .global-title{
+          .hero-global-title{
             font-size: 64px;
-            line-height: 1.16em;
+            line-height: 1.16;
+            max-width: 630px;
             } 
+            .hero-text-box{
+              top: 150px;
+            }
         }
