--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -184,7 +184,8 @@ display: none;
     }
       @media screen and (min-width: 1440px){
         .container {
-          max-width: 1240px; }
+          max-width: 1240px; 
+        }
 
           .hero-global-title{
             font-size: 64px;
