--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,32 +1,34 @@
-<section class="about-us">
-  <h2>About Us</h2>
-  <ul class="about-list">
-    <li  class="about-text">
-        The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
-        vyshyvanka comes to life with new zest and style. Our store offers a
-        wide selection of high-quality and authentic embroidery, which combines
-        the elegance of traditional needlework and modern design.
- </li>
-    <li class="about-text">
-        In "Vyshyvanka Vibes" you will find various models of embroidery, from
-        classic to modern, corresponding to the latest fashion trends. Our
-        embroidery is made using natural fabrics and is embroidered by highly
-        qualified craftsmen who convey the beauty of Ukrainian culture in every
-        detail.We believe that vyshyvanka is not just clothing, but a symbol of
-        national pride, the heritage of our ancestors and a way of expressing
-        one's individuality. Each embroidery from "Vyshyvanka Vibes" has its own
-        unique history and symbolism, which gives it a special meaning.
-    </li>
-  </ul>
+<section class="about-us container">
+ <div class="about-container">
+      <h2 class="about-title">About Us</h2>
+      <ul class="about-list">
+        <li  class="about-text">
+            The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
+            vyshyvanka comes to life with new zest and style. Our store offers a
+            wide selection of high-quality and authentic embroidery, which combines
+            the elegance of traditional needlework and modern design.
+     </li>
+        <li class="about-text">
+            In "Vyshyvanka Vibes" you will find various models of embroidery, from
+            classic to modern, corresponding to the latest fashion trends. Our
+            embroidery is made using natural fabrics and is embroidered by highly
+            qualified craftsmen who convey the beauty of Ukrainian culture in every
+            detail.We believe that vyshyvanka is not just clothing, but a symbol of
+            national pride, the heritage of our ancestors and a way of expressing
+            one's individuality. Each embroidery from "Vyshyvanka Vibes" has its own
+            unique history and symbolism, which gives it a special meaning.
+        </li>
+      </ul>
+ </div>
 
   <div class="about-img">
-    <picture>
+    <picture >
       <source
         srcset="
           ./img/girl-and-boy-desctop.jpeg    1x,
           ./img/girl-and-boy-desctop@2x.jpeg 2x
         "
-        media="min-width: 1440px"
+        media="min-width: 1440px" loading="lazy"
       />
       <source
         srcset="
@@ -49,7 +51,7 @@
         "
         media="min-width: 375px"
       />
-      <img
+      <img class="about-img-inner"
         src="./img/girl-and-boy-mob.jpeg"
         alt="Embroidered ornament shirt "
         width="335"
