--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,19 +6,42 @@
           <a class="footer-link-class link" href="#about-us">About us</a>
         </li>
         <li class="menu-item link">
-          <a class="footer-link-class link" href="#our-collection">Our collection </a>
+          <a class="footer-link-class link" href="#our-collection"
+            >Our collection
+          </a>
         </li>
         <li class="menu-item link">
-          <a class="footer-link-class link" href="#customer-order">Customer order</a>
+          <a class="footer-link-class link" href="#customer-order"
+            >Customer order</a
+          >
         </li>
         <li class="menu-item link">
-          <a class="footer-link-class link" href="#testimonials">Testimonials</a>
+          <a class="footer-link-class link" href="#testimonials"
+            >Testimonials</a
+          >
         </li>
       </ul>
     </div>
     <picture class="ornament-picture">
-      <source srcset="src/img/ornament-your-order-dsctop.png" media="(mi)" />
-      <img src="./img/ornament-footer-desctop-small.png" />
+      <source srcset="./img/ornament-footer-desctop.png" media="(min-width: 1440px)"/>
+      <source
+        srcset="
+          ./img/ornament-footer-desctop-small.png 1x,
+          ornament-footer-desctop-small@2x.png    2x
+        " media="(min-width: 1280px)"
+      />
+      <source
+        srcset="./img/ornament-footer-tab.png 1x, ornament-footer-tab@2x.png 2x" media="(min-width: 768px)"
+      />
+      <source
+        srcset="./img/ornament-footer-mob.png 1x, ornament-footer-mob@2x.png 2x" media="(max-width: 767px)"
+      />
+      <img
+        src="../img/ornament-footer-desctop.png"
+        alt="Ornament"
+        width="595"
+        height="528"
+      />
     </picture>
     <div class="container-footer-div">
       <h3 class="footer-paragraph-text">
