loading lazy added

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,21 +23,28 @@
       </ul>
     </div>
     <picture class="ornament-picture">
-      <source srcset="./img/ornament-footer-desctop.png" media="(min-width: 1440px)"/>
+      <source
+        srcset="./img/ornament-footer-desctop.png"
+        media="(min-width: 1440px)"
+      />
       <source
         srcset="
           ./img/ornament-footer-desctop-small.png 1x,
           ornament-footer-desctop-small@2x.png    2x
-        " media="(min-width: 1280px)"
+        "
+        media="(min-width: 1280px)"
       />
       <source
-        srcset="./img/ornament-footer-tab.png 1x, ornament-footer-tab@2x.png 2x" media="(min-width: 768px)"
+        srcset="./img/ornament-footer-tab.png 1x, ornament-footer-tab@2x.png 2x"
+        media="(min-width: 768px)"
       />
       <source
-        srcset="./img/ornament-footer-mob.png 1x, ornament-footer-mob@2x.png 2x" media="(max-width: 767px)"
+        srcset="./img/ornament-footer-mob.png 1x, ornament-footer-mob@2x.png 2x"
+        media="(max-width: 767px)"
       />
       <img
         src="../img/ornament-footer-desctop.png"
+        loading="lazy"
         alt="Ornament"
         width="595"
         height="528"
