--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -56,6 +56,7 @@
         alt="Embroidered ornament shirt "
         width="335"
         height="499"
+        loading="lazy"
       />
     </picture>
   </div>
