--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -9,7 +9,7 @@
             the elegance of traditional needlework and modern design.
      </li>
         <li class="about-text">
-            In "Vyshyvanka Vibes" you will find various models of embroidery, from
+            БIn "Vyshyvanka Vibes" you will find various models of embroidery, from
             classic to modern, corresponding to the latest fashion trends. Our
             embroidery is made using natural fabrics and is embroidered by highly
             qualified craftsmen who convey the beauty of Ukrainian culture in every
