--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -30,16 +30,16 @@
       <source
         srcset="
           ./img/ornament-footer-desctop-small.png 1x,
-          ornament-footer-desctop-small@2x.png    2x
+          ./img/ornament-footer-desctop-small@2x.png    2x
         "
         media="(min-width: 1280px)"
       />
       <source
-        srcset="./img/ornament-footer-tab.png 1x, ornament-footer-tab@2x.png 2x"
+        srcset="./img/ornament-footer-tab.png 1x, ./img/ornament-footer-tab@2x.png 2x"
         media="(min-width: 768px)"
       />
       <source
-        srcset="./img/ornament-footer-mob.png 1x, ornament-footer-mob@2x.png 2x"
+        srcset="./img/ornament-footer-mob.png 1x, ./img/ornament-footer-mob@2x.png 2x"
         media="(max-width: 767px)"
       />
       <img
@@ -52,7 +52,7 @@
     </picture>
     <div class="container-footer-div">
       <h3 class="footer-paragraph-text">
-        A touch of Ukrainian culture in every embroidery
+        A touch of <span class="ukrainian-span">Ukrainian</span> culture in every embroidery
       </h3>
     </div>
   </div>
